--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -1,16 +1,12 @@
 {
-  "name": "PortfolioReactApp",
+  "name": "Portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.1.3",
-    "jquery": "3.3.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
     "react-scripts": "^1.1.5",
-    "reactstrap": "^6.3.0",
     "rimraf": "^2.6.2",
     "react-router": "latest"
   },
