--- a/ClientApp/public/manifest.json
+++ b/ClientApp/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "PortfolioReactApp",
-  "name": "PortfolioReactApp",
+  "short_name": "Portfolio",
+  "name": "Portfolio",
   "icons": [
     {
       "src": "favicon.ico",
