--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -19,7 +19,8 @@
     "eslint-plugin-flowtype": "^2.50.3",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.11.1"
+    "eslint-plugin-react": "^7.11.1",
+    "node-sass": "^4.11.0"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -27,6 +28,7 @@
   "scripts": {
     "start": "rimraf ./build && react-scripts start",
     "build": "react-scripts build",
+    "scss": ".\\node_modules\\.bin\\node-sass --watch -o .\\public --output-style compressed --include-path .\\public .\\public\\styles.scss",
     "test": "cross-env CI=true react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "lint": "eslint ./src/"
