Change URLs to point to AWS Amplify

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Portfolio",
   "readme": "https://github.com/nl253/Portfolio/blob/master/README.md",
-  "homepage": "https://portfolio-nl.herokuapp.com",
+  "homepage": "https://portfolio.norbert-logiewa.co.uk",
   "keywords": [
     "portfolio",
     "ui",
