--- a/package.json
+++ b/package.json
@@ -69,28 +69,11 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-security": "^1.4.0",
-    "jsdoc": "3.6.3",
     "jsonlint": "^1.6.3",
     "license-checker": "^25.0.1",
-    "markdownlint": "^0.17.2",
-    "markdownlint-cli": "^0.19.0",
-    "remark": "^11.0.2",
-    "remark-cli": "^7.0.1",
-    "remark-lint": "^6.0.5",
-    "remark-preset-lint-consistent": "^2.0.3",
-    "remark-preset-lint-markdown-style-guide": "^2.1.3",
-    "remark-preset-lint-recommended": "^3.0.3",
-    "retire": "^2.0.3",
-    "write-good": "^1.0.2"
+    "retire": "^2.0.3"
   },
   "private": true,
-  "remarkConfig": {
-    "plugins": [
-      "remark-preset-lint-recommended",
-      "remark-preset-lint-markdown-style-guide",
-      "remark-preset-lint-consistent"
-    ]
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
