--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -42,4 +42,16 @@ plugins:
   - compat
   - security
 root: true
-rules: {}
+rules:
+  react/prop-types: 0
+  react/jsx-filename-extension: 0
+  react/no-array-index-key: 0
+  max-len: 0
+  class-methods-use-this: 1
+  comma-dangle: 0
+  object-curly-newline: 1
+  no-mixed-operators: 1
+  no-await-in-loop: 0
+  react/jsx-one-expression-per-line: 0
+  no-confusing-arrow: 0
+  react/destructuring-assignment: 0
