--- a/package.json
+++ b/package.json
@@ -50,13 +50,13 @@
     ]
   },
   "dependencies": {
+    "bootstrap": "^4.4.1",
+    "node-sass": "^4.14.0",
     "react": "^16.12.0",
-    "react-scripts": "3.3.0",
     "react-dom": "^16.0.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "node-sass": "^4.11.0",
-    "bootstrap": "^4.4.1"
+    "react-scripts": "3.3.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
@@ -78,12 +78,6 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "lint": "bash -c \"npm run lint:code && npm run lint:doc && npm run lint:deps\"",
-    "lint:code": "bash -c \"npx eslint ./src/*.js ./src/components/*/*.js\"",
-    "lint:deps": "bash -c \"npm run lint:deps:license && npm run lint:deps:security\"",
-    "lint:deps:security": "npx retire --js",
-    "lint:deps:license": "npx license-checker --summary",
-    "loc": "bash -c \"tokei -- $(git ls-files | grep -v docs | grep -v bin)\""
+    "eject": "react-scripts eject"
   }
 }
